new themebox rashid

--- a/templates/tibiacom/config.ini
+++ b/templates/tibiacom/config.ini
@@ -5,7 +5,7 @@ vdarkborder = "#505050"
 logo_monster = "Wyrm"
 
 ; List: newcomer,gallery,premium,poll,highscores,networks
-boxes = "highscores,discord,donate,searchchar,poll"
+boxes = "highscores,discord,donate,searchchar,rashid,poll"
 
 ; leave empty to disable
 network_facebook = "tibia"
