--- a/templates/tibiacom/config.ini
+++ b/templates/tibiacom/config.ini
@@ -4,8 +4,8 @@ vdarkborder = "#505050"
 
 logo_monster = "Wyrm"
 
-; List: newcomer,gallery,premium,poll,highscores,networks
-boxes = "highscores,discord,donate,searchchar,rashid,poll"
+; List: newcomer,gallery,premium,poll,highscores,networks - discord,donate,searchchar,rashid
+boxes = "rank,premium,discord,donate,searchchar,rashid,poll"
 
 ; leave empty to disable
 network_facebook = "tibia"
