--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,35 @@ Thumbs.db
 .idea
 # git rm --cached -r .idea
 
+# composer
+composer.lock
+vendor
+
 # npm
 node_modules
 
+# cypress
+cypress.env.json
+cypress/e2e/2-advanced-examples
+
+# created by release.sh
+releases
+tmp
+
 config.local.php
-logs/
+
+# all custom templates
+templates/*
+!templates/tibiacom
+!templates/kathrine
 
 # guild images
 images/guilds/*
 !images/guilds/default.gif
+
+# editor images
+images/editor/*
+!images/editor/index.html
 
 # cache
 system/cache/*
@@ -27,7 +47,21 @@ system/php_sessions/*
 # logs
 system/logs/*
 !system/logs/index.html
+logs/
 
 # data
 system/data/*
 !system/data/index.html
+
+# plugins
+plugins/*
+!plugins/.htaccess
+!plugins/example.json
+!plugins/account-create-hint.json
+!plugins/account-create-hint
+!plugins/email-confirmed-reward.json
+!plugins/email-confirmed-reward
+landing
+
+# others/rest
+system/pages/downloads.php
