--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,8 @@ plugins/*
 !plugins/account-create-hint
 !plugins/email-confirmed-reward.json
 !plugins/email-confirmed-reward
+!plugins/email-confirmed-reward.json
+!plugins/email-confirmed-reward
 landing
 
 # others/rest
