fix: add .git to denied folders in nginx

--- a/nginx-sample.conf
+++ b/nginx-sample.conf
@@ -3,7 +3,7 @@ server {
 	root /home/otserv/www/public;
 	index index.php;
 	server_name your-domain.com;
-	
+
 	location ~ /system {
 		deny all;
 		return 404;
@@ -12,6 +12,11 @@ server {
 	location ~ /\.ht {
 		deny all;
 	}
+
+	location ~ /\.git {
+    		return 404;
+    		deny all;
+    	}
 
 	location / {
 		try_files $uri $uri/ /index.php;
