--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,19 @@ node_modules
 # cypress
 cypress.env.json
 cypress/e2e/2-advanced-examples
+cypress/e2e/advanced-examples/*
 
 # created by release.sh
 releases
 tmp
 
 config.local.php
+cache/serverstatus.txt
+cache/usercounter.tx
+downloads/*
+logs/
+logs
+!logs/index.html
 
 # all custom templates
 templates/*
@@ -35,6 +42,12 @@ images/guilds/*
 # editor images
 images/editor/*
 !images/editor/index.html
+
+# gallery images
+images/gallery/*
+!images/gallery/index.html
+!images/gallery/demon.jpg
+!images/gallery/demon_thumb.gif
 
 # cache
 system/cache/*
@@ -62,8 +75,6 @@ plugins/*
 !plugins/example.json
 !plugins/account-create-hint.json
 !plugins/account-create-hint
-!plugins/email-confirmed-reward.json
-!plugins/email-confirmed-reward
 !plugins/email-confirmed-reward.json
 !plugins/email-confirmed-reward
 landing
