pagseguro: incluiu funcionalidades do pagseguro ao myaac. (criou tela de donate e de venda de boxes). trocou url points para donate.

--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ plugins/*
 !plugins/email-confirmed-reward.json
 !plugins/email-confirmed-reward
 landing
+!plugins/pagseguro
 
 # others/rest
 system/pages/downloads.php
