--- a/.github/workflows/prettier-php.yml
+++ b/.github/workflows/prettier-php.yml
@@ -38,9 +38,13 @@ jobs:
       - name: Install Dependencies
         run: npm install prettier @prettier/plugin-php
 
-      - name: Run prettier code format
+      - name: Get changed files
+        id: get_changed_files
         run: |
-          npx prettier --write ${{ git diff --name-only ${{ github.event.before }} ${{ github.sha }} }} --plugin=@prettier/plugin-php
+          CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
+
+      - name: Run prettier code format
+        run: npx prettier --write ${{ steps.get_changed_files.outputs.CHANGED_FILES }} --plugin=@prettier/plugin-php
         working-directory: ${{ github.workspace }}
 
 #          npx prettier --write "**/workflow_test/*.{php,css,js}" --plugin=@prettier/plugin-php
