--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
+  "scripts": {
+    "prettier:format": "prettier --write \"**/{*.php,*.html}\"",
+    "prettier:styles": "prettier --write \"**/*.css\"",
+    "prepare": "husky install"
+  },
   "devDependencies": {
     "@prettier/plugin-php": "^0.22.2",
-    "prettier": "3.2.5"
+    "git-format-staged": "^3.1.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "3.2.5",
+    "pretty-quick": "^4.0.0"
+  },
+  "lint-staged": {
+    "**/*.{php,html}": "npm run prettier:format",
+    "*.css": "npm run prettier:styles"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
