rename 'account_change_coin_type' to 'account_coin_type_usage' and 'account_premium_coins' to 'account_welcome_coins' and fix their usages. changed main coin to 'coins_transferable'.

--- a/.prettierignore
+++ b/.prettierignore
@@ -12,7 +12,7 @@ node_modules
 
 # Files
 login.php
-createaccount.php
+clientcreateaccount.php
 
 # Styles
 admin/bootstrap/pace/templates/pace-theme-loading-bar.tmpl.css
